--- a/Report/ref.bib
+++ b/Report/ref.bib
@@ -25,23 +25,6 @@ url = {http://arxiv.org/abs/1411.4038},
 year = {2014}
 }
 
-@inproceedings{Dollar2009,
-abstract = {Pedestrian detection is a key problem in computer vision, with several applications including robotics, surveillance and automotive safety. Much of the progress of the past few years has been driven by the availability of challenging public datasets. To continue the rapid rate of innovation, we introduce the Caltech Pedestrian Dataset, which is two orders of magnitude larger than existing datasets. The dataset contains richly annotated video, recorded from a moving vehicle, with challenging images of low resolution and frequently occluded people. We propose improved evaluation metrics, demonstrating that commonly used per-window measures are flawed and can fail to predict performance on full images. We also benchmark several promising detection systems, providing an overview of state-of-the-art performance and a direct, unbiased comparison of existing methods. Finally, by analyzing common failure cases, we help identify future research directions for the field.},
-author = {Dollar, P. and Wojek, C. and Schiele, B. and Perona, P.},
-booktitle = {2009 IEEE Conference on Computer Vision and Pattern Recognition},
-doi = {10.1109/CVPR.2009.5206631},
-isbn = {978-1-4244-3992-8},
-issn = {1063-6919},
-keywords = {Application software,Automotive engineering,Caltech Pedestrian Dataset,Computer vision,Failure analysis,Image resolution,Robot vision systems,Safety,Surveillance,Technological innovation,Vehicles,annotated video,computer vision,image resolution,object detection,occluded people,pedestrian detection,traffic engineering computing,video signal processing},
-mendeley-groups = {CV},
-month = {jun},
-pages = {304--311},
-publisher = {IEEE},
-shorttitle = {Computer Vision and Pattern Recognition, 2009. CVP},
-title = {{Pedestrian detection: A benchmark}},
-url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=5206631},
-year = {2009}
-}
 @article{Tian2015,
 author = {Tian, Y and Luo, P and Wang, X and Tang, X},
 file = {:Users/zhiconglu/Library/Application Support/Mendeley Desktop/Downloaded/Tian et al. - Unknown - Deep Learning Strong Parts for Pedestrian Detection.pdf:pdf},
@@ -96,6 +79,23 @@ year = {2015}
 	year = {2004},
 	pages = {762--769},
 	publisher = {}
+}
+
+@inproceedings{Dollar2009,
+author = {Dollar, P. and Wojek, C. and Schiele, B. and Perona, P.},
+booktitle = {2009 IEEE Conference on Computer Vision and Pattern Recognition},
+doi = {10.1109/CVPR.2009.5206631},
+isbn = {978-1-4244-3992-8},
+issn = {1063-6919},
+keywords = {Application software,Automotive engineering,Caltech Pedestrian Dataset,Computer vision,Failure analysis,Image resolution,Robot vision systems,Safety,Surveillance,Technological innovation,Vehicles,annotated video,computer vision,image resolution,object detection,occluded people,pedestrian detection,traffic engineering computing,video signal processing},
+mendeley-groups = {CV},
+month = {jun},
+pages = {304--311},
+publisher = {IEEE},
+shorttitle = {Computer Vision and Pattern Recognition, 2009. CVP},
+title = {{Pedestrian detection: A benchmark}},
+url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=5206631},
+year = {2009}
 }
 
 % Add by Zhen:
@@ -167,4 +167,19 @@ year = {2015}
   pages={167--181},
   year={2004},
   publisher={Springer}
+}
+
+@article{palm2012prediction,
+  title={Prediction as a candidate for learning deep hierarchical models of data},
+  author={Palm, Rasmus Berg},
+  journal={Technical University of Denmark},
+  year={2012}
+}
+
+@inproceedings{flohr2013pedcut,
+  title={PedCut: an iterative framework for pedestrian segmentation combining shape models and multiple data cues},
+  author={Flohr, Fabian and Gavrila, Dariu M},
+  booktitle={Proc. BMVC},
+  pages={66--1},
+  year={2013}
 }
