--- a/Report/nips2015.tex
+++ b/Report/nips2015.tex
@@ -62,15 +62,15 @@ Object detection has always been one of the core problems of Computer Vision and
 
 It is hard to apply classical machine learning techniques on this topic directly. Compared with the traditional object recognition database, for example, the MNIST Database \cite{lecun1998gradient}, the real road images have more occlusions, more complicated background textures, and as a result, objects from the real road images are harder to detect. 
 
-The basic idea of this project came from The KITTI Vision Benchmark Suite \cite{Geiger2012CVPR}. It provides a well labeled training set containing $7481$ color images, including several classes such as cars, pedestrians, cyclists, vans, trucks, etc. Inspired by the ranking of different methods on the KITTI website, we would try to implement those with very good performance and without using other sensor data (or dual camera information), for the reason that such methods are more accessible and have better potential to be implemented even on mobile devices. We would try to improve the training model based on the findings of the state-of-the-art to come up with our own method, and evaluate the performance of it. We expect that our method can reach a high accuracy on the test set with an optimized speed. 
+The basic idea of this project came from the KITTI Vision Benchmark Suite \cite{Geiger2012CVPR}. It provides a well labeled training set containing $7481$ color images, including several classes such as cars, pedestrians, cyclists, vans, trucks, etc. Inspired by the ranking of different methods on the KITTI website, we try to implement those with very good performance and without using other sensor data (or dual camera information), for the reason that such methods are more accessible and have better potential to be implemented even on mobile devices. We try to improve the training model based on the findings of the state-of-the-art to come up with our own method, and evaluate the performance of it. 
 
-In this project, we focus on the performance of SVM, Regionlets \cite{Wang2013}, and CNN techniques as well as their differences. Our code is available on GitHub\footnote{https://github.com/CommanderLee/ObjectDetection}.
+In this project, we focus on the performance of SVM, Regionlets with boosting \cite{Wang2013}, and CNN techniques as well as their differences. Our code is available on GitHub\footnote{https://github.com/CommanderLee/ObjectDetection}.
 
 \section{Related work}
 
-The object detection, especially cars and pedestrians detection for the autonomous driving system, has been a hot topic in computer vision for recent years. In many tasks, since the number of images and windows to evaluate is huge, we often rely on a weak classifier to get proposals for the more expensive classifier. Selective Search \cite{van2011segmentation} is a successful algorithm, which emphasize recall to include all image fragments of potential relevance. It can be combined with many feature representation techniques, such as the histograms of oriented gradients (HOG) \cite{dalal2005histograms}, and SIFT \cite{lowe2004distinctive}. 
+Object detection, especially cars and pedestrians detection for the autonomous driving system, has been a hot topic in computer vision for recent years. In many tasks, since the number of images and detection windows to evaluate is huge, we often rely on a weak classifier to get proposals for the more expensive classifier. Selective Search \cite{van2011segmentation} is a successful algorithm, which emphasize recall to include all image fragments of potential relevance. It can be combined with many feature representation techniques, such as the histograms of oriented gradients (HOG) \cite{dalal2005histograms}, and SIFT \cite{lowe2004distinctive}. 
 
-[TODO: introduce Regionlets]
+Some other methods try to define other features of the images to deal with different degrees of variations in distinct object classes as well as different locations. Regionlets \cite{Wang2013} are defined as sub-regions in a feature extraction region which are grouped to represent specific features of that region.
 
 Convolutional Neural Network (CNN or ConvNet) \cite{Krizhevsky2012} is able to learn the features of the object and handle variations such as poses, viewpoints, and light conditions, with high accuracy and high efficiency. However, it doesn't perform well when occlusion occurs, which is often the case in pedestrian and cyclists detection. 
 
